BO: Fix menu truncated

--- a/admin-dev/themes/default/sass/partials/_nav.sass
+++ b/admin-dev/themes/default/sass/partials/_nav.sass
@@ -212,11 +212,9 @@ $min-height: 950px
 			text-align: center
 			> span
 				display: none
-		@media (max-height: 768px)
-			> ul > li.maintab.hover#subtab-ShopParameters,
-			> ul > li.maintab:hover#subtab-ShopParameters, 
-			> ul > li.maintab:hover#subtab-AdminAdvancedParameters,
-			> ul > li.maintab.active#subtab-AdminAdvancedParameters
+		@media (max-height: 870px)
+			> ul > li.maintab:hover#subtab-ShopParameters,
+			> ul > li.maintab:hover#subtab-AdminAdvancedParameters
 				ul.submenu
 					display: flex!important
 					flex-direction: column-reverse
